about me content

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         </div>
         
 <main>
-    <div class="sections">
+    <div class="about-me">
     <a id="about-Me">
      <h1>About Me</h1>
     </div>
+    <img src="assets/images/IMG_6632 (2).jpg">
       <p> this is about me section</p>
+</div>
        
   <div class="sections"> 
     <a id="works">
