add container for works section

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </p>
         </div>
 
-        <container class="works">
+        <div class="container">
             <h2>Works</h2>
-        </container>
-        <container class="content">
+        </div>
+        <div class="content">
             <a href="https://dcastillomar.github.io/prework-study-guide/">
                 <figcaption>Prework Study Guide</figcaption>
                 <img src="assets/images/bacs_code-960x533.jpg" alt="prework-study-guide">
@@ -64,8 +64,8 @@
                 <br>This was a study guide created for the UT coding bootcamp using html.</br>
                 <br>It holds some helpful facts about HTML, CSS, and JavaScript.</br>
             </p>
-        </container>
-        <container class="debugging">
+        </div>
+        <div class="debugging">
             <p> View a website which I debugged!
                 <br>I fixed the menu buttons to scroll to the appropriate area on the screen.
                 </br>
@@ -76,7 +76,7 @@
             <a href="https://dcastillomar.github.io/Accessibility-optimized/">
                 <img src="assets/images/computer-science.jpg">
                 <figcaption>Acessibility Optimized Webpage</figcaption>
-        </container>
+            </div>
 
         <div class="resume">
             <a id="resume">
